fix Link to documentation (allow HTTP/HTTPS)

--- a/annotateit/templates/index.html
+++ b/annotateit/templates/index.html
@@ -80,7 +80,7 @@
         <pre><code>$(<span class=string>'#content'</span>).annotator()
              .annotator(<span class=string>'setupPlugins'</span>);</code></pre>
         <p>
-          For full details, see the <a href="https://github.com/okfn/annotator/wiki/Getting-Started">Getting Started</a> page on the <a href="https://github.com/okfn/annotator/wiki">Annotator wiki</a>.
+          For full details, see the <a href="//docs.annotatorjs.org/en/latest/getting-started.html">Getting Started</a> section in the <a href="//docs.annotatorjs.org/en/latest/index.html">Annotator’s documentation</a>.
         </p>
       </div>
       <div class=span6>
